--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +11,109 @@
   <link rel="stylesheet" href="./public/style/main.css" />
   <title>test-layout</title>
 </head>
+
 <body>
-  
+  <div class="main-block">
+    <div class="first-block">
+      <header class="header">
+        <img src="./public/img/logo.svg" alt="logo" class="logo">
+        <div class="navbar">
+          <a href="#" class="link">Рацион</a>
+          <a href="#" class="link">Как готовим</a>
+          <a href="#" class="link">Цена</a>
+          <a href="#" class="link">Отзывы</a>
+          <a href="#" class="link">О нас</a>
+          <a href="#" class="link">Войти</a>
+        </div>
+        <button class="callback">Обратный звонок</button>
+      </header>
+
+      <div class="slogans">
+        <div class="main-slogan">
+          <h1>Подписка на натуральную еду для вашей собаки</h1>
+        </div>
+        <div class="pre-slogans">
+          <div class="pre-slogan">
+            <img src="./public/img/guard.svg" alt="guard">
+            <p>Подберём витамины и микроэлементы</p>
+          </div>
+          <div class="pre-slogan">
+            <img src="./public/img/heart.svg" alt="heart">
+            <p>Будем следить за здоровьем питомца</p>
+          </div>
+        </div>
+      </div>
+      <div class="main-dog">
+        <img src="./public/img/dog-1.png" alt="dog">
+      </div>
+      <button class="chose-diet">Подобрать рацион</button>
+      <div class="second-slogan">
+        <h3>Какой породы ваш любимчик?</h3>
+        <p>Так мы сможем точнее подобрать рацион и назвать цену</p>
+      </div>
+    </div>
+  </div>
+  <div class="second-block">
+    <div class="slider">
+      <div class="buttons">
+        <img class="prew-btn" src="./public/img/slider/prew.svg" alt="button">
+        <img class="next-btn" src="./public/img/slider/next.svg" alt="button">
+      </div>
+      <div class="contain">
+        <div class="card">
+          <img src="./public/img/slider/dog-1.png" alt="dog" class="item">
+          <div class="info">
+            <p class="name">Шпиц</p>
+            <p class="weight">до 13 кг</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./public/img/slider/dog-2.png" alt="dog" class="item">
+          <div class="info">
+            <p class="name">Шпиц</p>
+            <p class="weight">до 13 кг</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./public/img/slider/dog-3.png" alt="dog" class="item">
+          <div class="info">
+            <p class="name">Шпиц</p>
+            <p class="weight">до 13 кг</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./public/img/slider/dog-4.png" alt="dog" class="item">
+          <div class="info">
+            <p class="name">Шпиц</p>
+            <p class="weight">до 13 кг</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./public/img/slider/dog-5.png" alt="dog" class="item">
+          <div class="info">
+            <p class="name">Шпиц</p>
+            <p class="weight">до 13 кг</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="woman">
+    <div class="card-woman">
+      <div class="card-text">
+        <h3>Разработаем индивидуальный рацион под особенности вашего питомца</h3>
+        <p>И будем помогать с адаптацией к нему в течение месяца</p>
+        <button>Рассказать о собаке</button>
+      </div>
+      <div class="bio">
+        <p class="name">Александра Буланова</p>
+        <p class="position">Ветеринар «Биоконтроль»</p>
+      </div>
+      <div class="card-img">
+        <img src="./public/img/woman.png" alt="woman">
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
